re PR middle-end/30028 (bcopy is wrongly converted to memcpy)

PR middle-end/30028
	* builtins.c (fold_builtin_memory_op): Fix typo in the check for
	memmove/bcopy->memcpy conversion.

From-SVN: r119375